# vinri2z.github.io

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  contribution-debt-chart.html
.cargo/: config.toml
.github/workflows/: deploy.yml  release.yml
content/posts/: are-birds-socialists.md  intersection-of-ai-and-sustainability.md
content/posts/en/: are-birds-socialists.md  intersection-of-ai-and-sustainability.md  powerful-and-dependent.md  sustainable-computing.md  the-anti-newspeak.md  the-weight-of-the-cloud.md  why-ai-safety-matters.md
content/posts/es/: are-birds-socialists.md  intersection-of-ai-and-sustainability.md  powerful-and-dependent.md  sustainable-computing.md  the-anti-newspeak.md  the-weight-of-the-cloud.md  why-ai-safety-matters.md
content/posts/fr/: are-birds-socialists.md  intersection-of-ai-and-sustainability.md  powerful-and-dependent.md  sustainable-computing.md  the-anti-newspeak.md  the-weight-of-the-cloud.md  why-ai-safety-matters.md
scripts/: lint-prose.sh
scripts/hooks/: pre-commit
src/: main.rs
static/: contribution-debt-all.html  contribution-debt-chart.html
